# pfe

./: .gitmodules  mailShoppingAmazon.txt  notes for next meeting.md  readme.md
install/: local_setup.sh  setup.ps1  setup.sh
log/: latest_build
open-manipulator/: open_manipulator_xgroup1_link1end_effector_link_5000_1.000000_1.000000.ikcache
open-manipulator/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
open-manipulator/log/: latest_build
open-manipulator/open-manipulator-moveit/: .setup_assistant  CMakeLists.txt  package.xml
open-manipulator/open-manipulator-moveit/config/: kinematics.yaml  moveit_controllers.yaml  open_manipulator_x.srdf
open-manipulator/open-manipulator-moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
pfe-ws/src/crawler_hardware_interface/: CMakeLists.txt  package.xml
report/: report.tex
src/FAST_LIO/: screenshot-1720031092.cam
src/FAST_LIO/config/: mid360.yaml
src/livox_ros_driver2/: CMakeLists.txt
src/vince_utilities/: CMakeLists.txt  package.xml
src/walkingTest/: metadata.yaml
testRosBag/: metadata.yaml
ws/: commands.md
ws/crawler/: CMakeLists.txt
ws/crawler/launch/: rsp.launch.py  (+7 more)
ws/install/: local_setup.sh  setup.sh  setup.zsh
ws/log/: latest_build
ws/src/cloud_stacker/: CMakeLists.txt  package.xml
ws/src/cloud_stacker/include/: cloud_stacker_node.hpp
ws/src/cloud_stacker/src/: cloud_stacker_node.cpp
ws/src/skid_drive_controller/: CMakeLists.txt  package.xml  skid_drive_plugin.xml
ws/src/skid_drive_controller/doc/: userdoc.rst
ws/src/skid_drive_controller/include/skid_drive_controller/: skid_drive_controller.hpp  speed_limiter.hpp
ws/src/skid_drive_controller/install/: local_setup.sh  setup.bash  setup.sh
ws/src/skid_drive_controller/install/skid_drive_controller/include/skid_drive_controller/skid_drive_controller/: odometry.hpp  skid_drive_controller.hpp  visibility_control.h
ws/src/skid_drive_controller/install/skid_drive_controller/include/skid_drive_controller_parameters/: skid_drive_controller_parameters.hpp
ws/src/skid_drive_controller/install/skid_drive_controller/share/ament_index/resource_index/parent_prefix_path/: skid_drive_controller
ws/src/skid_drive_controller/install/skid_drive_controller/share/skid_drive_controller/: local_setup.sh  package.bash  package.sh  skid_drive_plugin.xml
ws/src/skid_drive_controller/install/skid_drive_controller/share/skid_drive_controller/cmake/: skid_drive_controllerConfig.cmake
ws/src/skid_drive_controller/log/: latest_build  latest_list
ws/src/skid_drive_controller/src/: odometry.cpp  skid_drive_controller.cpp  skid_drive_controller_parameter.yaml  speed_limiter.cpp
(+668 files in other folders)
